# pip-autocompile

./: .bandit.yml  .gitignore  .gitlint  .pre-commit-config.yaml  .renovaterc.json  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: build.yml  gitlint.yml  lint.yml  pre-commit.yml  release.yml  super-linter.yml  test.yml
examples/docker/: Dockerfile
examples/docker/requirements/: 60_dev.in  61_prod.in
examples/docker_ssh_agent/: Dockerfile
examples/docker_ssh_agent/requirements/: pip-autocompile.in
pipautocompile/: cli.py  git.py  io.py  logging.py  main.py  utils.py
src/pipautocompile/: docker.py  git.py  io.py  logging.py  main.py  utils.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2
tests/: conftest.py  test_docker.py  test_git.py  test_io.py  test_logging.py  test_main.py  test_utils.py
tests/test_docker/test_dockerfile_has_build_stage/: Dockerfile
