[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.run]
branch = true
relative_files = true

[tool.mypy]
disallow_any_unimported = true
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "dockerfile"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pygit2"

[tool.poetry]
authors = ["Konstantinos Smanis <konstantinos.smanis@gmail.com>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Build Tools",
]
description = "Automate pip-compile for multiple environments."
include = [
  {format = "sdist", path = "examples"},
  {format = "sdist", path = "tests"},
]
license = "MIT"
name = "pip-autocompile"
packages = [
  {from = "src", include = "pipautocompile"},
]
readme = "README.md"
repository = "https://github.com/KSmanis/pip-autocompile"
version = "0.7.15"

[tool.poetry.dependencies]
click = "^8.1.7"
dockerfile = "^3.3.1"
pygit2 = [
  {python = "^3.10", version = "^1.16.0"},
  {python = "~3.9", version = "~1.15.1"},
]
python = "^3.9"
python-on-whales = "^0.73.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.12.0"
pre-commit = "^4.0.1"

[tool.poetry.group.release.dependencies]
python-semantic-release = "^9.12.0"

[tool.poetry.group.test.dependencies]
pip-tools = "^7.4.1"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[tool.poetry.scripts]
pip-autocompile = "pipautocompile.main:cli"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=xml --strict-markers"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "I",  # isort
  "PGH",  # pygrep-hooks
  "PIE",  # fkae8-pie
  "PT",  # flake8-pytest-style
  "RUF",  # ruff
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "UP",  # pyupgrade
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-values-type = "tuple"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.semantic_release]
build_command = "poetry build"
commit_author = "Konstantinos Smanis <konstantinos.smanis@gmail.com>"
commit_message = "build: release v{version}"
major_on_zero = false
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.changelog]
exclude_commit_patterns = ["\\d+\\.\\d+\\.\\d+"]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.tomlsort]
all = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
