[metadata]
name = pip-autocompile
license = MIT
license_file = LICENSE
author = Konstantinos Smanis
author_email = konstantinos.smanis@gmail.com
description = Automate pip-compile for multiple environments.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/KSmanis/pip-autocompile
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Build Tools

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    click
    pip-tools
    python-on-whales

[options.extras_require]
dev = pre-commit

[options.entry_points]
console_scripts =
    pip-autocompile = pipautocompile.main:cli

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203
