[metadata]
name = pip_autocompile
description = Automate pip-compile for multiple environments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KSmanis/pip-autocompile
author = Konstantinos Smanis
author_email = konstantinos.smanis@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools

[options]
packages = find:
install_requires =
    click
python_requires = >=3.6
setup_requires =
    setuptools-scm

[options.entry_points]
console_scripts =
    pip-autocompile = pipautocompile.main:cli

[options.extras_require]
dev =
    pre-commit

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203
